--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Long Haul
+title: Dhani Baharzah
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
 url: http://brianmaierjr.github.com/long-haul
