--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Dhani Baharzah
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-url: http://brianmaierjr.github.com/long-haul
+url: http://github.com/dhanibaharzah
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
@@ -20,9 +20,9 @@ navigation:
     url: /contact
 
 social:
-  github: brianmaierjr
-  twitter: brianmaierjr
-  facebook: brianmaierjr
-  email: brimaidesigns@gmail.com
+  github: dhanibaharzah
+  twitter: dhanibaharzah
+  facebook: dhanibaharzah
+  email: dhanibaharzah@gmail.com
 
 google_analytics: "UA-58263416-1"
